Apply basic responsiveness

--- a/assets/scss/_normalize.scss
+++ b/assets/scss/_normalize.scss
@@ -7,7 +7,7 @@
 html,
 body {
     @include smooth-font;
-    color: color($grey, 800);
+    color: color($blue-grey, 800);
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 14px;
     font-weight: 400;
